<resources>
    <string name="app_name">Music Player</string>
    <!--    main app-->
    <string name="home">Home</string>
    <string name="my_music">My Music</string>
    <string name="watch">Watch</string>
    <string name="configuration">Configuration</string>
    <string name="settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="chat">Chat</string>
    <string name="credits">Credits</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="wallet">My Wallet</string>
    <string name="order">Orders</string>
    <string name="favorite">Favorites</string>
    <string name="address">Addresses</string>
    <string name="search_result">Search Result</string>
    <string name="search_default">Search Default</string>

    <string name="content_description_settings">This is the settings of the app.</string>
    <string name="content_description_home">This is the home of the app.</string>
    <string name="content_description_my_music">This is the my music of the app.</string>
    <string name="content_description_watch">This is the watch of the app.</string>
    <string name="content_description_wallet">This is the wallet of the app.</string>
    <string name="content_description_favorite">This is the favorite of the app.</string>
    <string name="content_description_order">This is the order of the app.</string>
    <string name="content_description_address">This is the address of the app.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    placeholders -->
    <string name="empty">empty</string>
    <string name="default_full_name_value">Juan Dela Cruz</string>
    <string name="default_first_name_value">Juan</string>
    <string name="default_last_name_value">Dela Cruz</string>
    <string name="default_email_value">juandelacruz99@email.com</string>
    <string name="default_title_value">Title</string>
    <string name="default_description_value">This is a description.</string>
    <string name="default_rating_value">5.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>